Added basic file creation functionality
Added ability to write files to skeletor.  Improved template structure.

--- a/lib/skeletor/templates/js-lib/js-lib.yml
+++ b/lib/skeletor/templates/js-lib/js-lib.yml
@@ -1,6 +1,14 @@
 directory_structure:
- src:
- lib:
- test:
-   functional:
-   unit:
+  -
+    src:
+    lib:
+    test:
+      -
+        functional:
+          -
+            - foo
+            
+        unit:
+  -
+    - README.md
+    - LICENSE
