Updated test template to use remote file for prototype

--- a/test/test-template/test-template.yml
+++ b/test/test-template/test-template.yml
@@ -8,5 +8,5 @@ directory_structure:
     - README.md
     - LICENSE
 includes:
-  prototype.js: includes/prototype.1.7.0.js
+  prototype.js: https://ajax.googleapis.com/ajax/libs/prototype/1.7.0.0/prototype.js
   LICENSE: includes/LICENSE
