--- a/test/test-template/test-template.yml
+++ b/test/test-template/test-template.yml
@@ -1,14 +1,2 @@
-directory_structure:
-  -
-    lib:
-      - 
-        - prototype.js
-    src: 
-  -
-    - README.md
-    - LICENSE
-includes:
-  prototype.js: https://ajax.googleapis.com/ajax/libs/prototype/1.7.0.0/prototype.js
-  LICENSE: includes/LICENSE
 tasks:
-  - git_init, <skeleton_path>
+  - gitinit, <skeleton_path>
